testsuite/tests/parser/should_fail/patFail010.hs
module PatFail010 where

f (a `_` b) = ()
