testsuite/tests/parser/should_fail/patFail010.stderr
patFail010.hs:3:6: error: [GHC-45106]
    Invalid infix hole, expected an infix operator

